# propellor

./: .gitignore  CHANGELOG  CmdLine.hs  Common.hs  HostName.hs  HostProp.hs  LICENSE  Makefile  PrivData.hs  Propellor.hs  Property.hs  README  README.md  TODO  Types.hs  cabal.project  config-freebsd.hs  config-joey.hs  config-joeyh.hs  config-simple.hs  config.hs  config.hs.simple  cross-build.nix  default.nix  docker.nix  hie.yaml  hostprop.cabal  joeyconfig.hs  propellor.1  propellor.cabal  propellor.hs  result  shell.nix  simple-config.hs  stack.yaml  stack.yaml.orig  tarball.nix
Host/: clam.hs
Propellor/: Attr.hs  CmdLine.hs  Common.hs  Engine.hs  Exception.hs  Message.hs  PrivData.hs  Property.hs  SimpleSh.hs  Types.hs
Property/: Apt.hs  Cmd.hs  Docker.hs  File.hs  GitHome.hs  Hostname.hs  JoeySites.hs  Network.hs  Reboot.hs  Ssh.hs  Sudo.hs  Tor.hs  User.hs
Utility/: Scheduled.hs
contrib/: post-checkout-hook  post-merge-hook
debian/: README  README.Debian  changelog  control  copyright  lintian-overrides  manpages  propellor.1  rules
doc/: FreeBSD.mdwn  Linux.mdwn  README.mdwn  automated_spins.mdwn  centralized_git_repository.mdwn  coding_style.mdwn  components.mdwn  contributing.mdwn  debugging.mdwn  documentation.mdwn  feeds.mdwn  haskell_newbie.mdwn  index.mdwn  install.mdwn  interface_stability.mdwn  security.mdwn  todo.mdwn  usage.mdwn  writing_properties.mdwn
nix/: sources.json
privdata/: clam.kitenet.net.gpg  darkstar.kitenet.net.gpg  diatom.kitenet.net.gpg  elephant.kitenet.net.gpg  kgb-server.docker.gpg  privdata.gpg  (+2 more)
privdata.joey/: keyring.gpg  privdata.gpg
(+499 files in other folders)
