Name: propellor
Version: 0
Cabal-Version: >= 1.6
License: GPL
Maintainer: Joey Hess <joey@kitenet.net>
Author: Joey Hess
Stability: Stable
Copyright: 2014 Joey Hess
License-File: GPL
Build-Type: Simple
Homepage: http://joeyh.name/code/propellor/
Category: Utility
Synopsis: property-based host configuration management in haskell
Description:
 Propellor enures that the system it's run in satisfies a list of
 properties, taking action as necessary when a property is not yet met.

Executable propellor
  Main-Is: Propellor.hs
  GHC-Options: -Wall
  Build-Depends: MissingH, directory, filepath, base >= 4.5, base < 5, 
   IfElse, process, bytestring, hslogger, unix-compat, ansi-terminal,
   containers

  if (! os(windows))
    Build-Depends: unix

source-repository head
  type: git
  location: git://git.kitenet.net/propellor.git
